WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242685
AX: Header elements inside main elements should not be banner landmarks
https://bugs.webkit.org/show_bug.cgi?id=242685
Summary
AX: Header elements inside main elements should not be banner landmarks
Derk-Jan Hartman
Reported
2022-07-13 03:22:54 PDT
Per
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header
and
https://www.w3.org/WAI/ARIA/apg/example-index/landmarks/HTML5.html
<header> should carry the banner landmark role, when in context of the body element. The header element is not a banner landmark when it is a descendant of the following HTML sectioning elements: article, aside, main, nav, section. This is not currently how VoiceOver + Safari implements this. Any header element seems to generate a landmark banner role, irrespective of being positioned inside of article, aside, main, nav, section elements. Interestingly this is correctly implemented for sections. As you can detect with the rotor and landmark navigation in the the included example, the header element inside of a main is presented as a landmark, yet the header inside of a section is NOT a banner landmark in the landmark navigation.
Attachments
index.html with 3 header elements within different parents
(471 bytes, text/html)
2022-07-13 03:23 PDT
,
Derk-Jan Hartman
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-13 03:23:05 PDT
<
rdar://problem/96942150
>
Derk-Jan Hartman
Comment 2
2022-07-13 03:23:57 PDT
Created
attachment 460851
[details]
index.html with 3 header elements within different parents
Joone Hur
Comment 3
2024-01-08 00:42:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22499
Joone Hur
Comment 4
2024-01-09 17:57:21 PST
https://bugs.webkit.org/show_bug.cgi?id=195010
EWS
Comment 5
2024-01-18 11:48:44 PST
Committed
273188@main
(da3bbf117740): <
https://commits.webkit.org/273188@main
> Reviewed commits have been landed. Closing PR #22499 and removing active labels.
James Craig
Comment 6
2024-01-18 16:27:16 PST
See WPT review changes requested
https://github.com/web-platform-tests/wpt/pull/44080#discussion_r1458126371
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug