Fix role assignment for <header> inside <main> and sectioning elements https://bugs.webkit.org/show_bug.cgi?id=242685 <rdar://48370244>

Reviewed by Tyler Wilcock.

This change assigns a generic role to <header> elements when nested
within <main>, <aside>, <article>, <section>, or <nav> elements, aligning with
the W3C spec(https://w3c.github.io/html-aam/#el-header)

Previously, the <main> element was not included in these conditions.
The <header> element assumed an unknown role instead of a generic role in these
conditions.

* LayoutTests/accessibility/mac/html-section-elements-expected.txt:
* LayoutTests/accessibility/mac/html-section-elements.html:
* LayoutTests/imported/w3c/web-platform-tests/html-aam/roles-contextual-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html-aam/roles-contextual.html:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::determineAccessibilityRoleFromNode const):

Canonical link: https://commits.webkit.org/273188@main